# z-fleet

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci-images.yml  ci-linux-after-images.yml  ci-linux-core.yml  ci-linux.yml  ci-windows.yml  ci.yml  release-packaging.yml  release.yml  resolve-image-meta.yml
apps/agent/: CMakeLists.txt
apps/agent/src/: app.cpp  app.h  command_decoder.cpp  command_decoder.h  config.cpp  config.h  http2_control_client.cpp  http2_control_client.h  main.cpp  package_updater.cpp  package_updater.h  runtime.cpp  runtime.h  state.cpp  state.h
apps/agent/tests/: agent_test.cpp
apps/installer/: CMakeLists.txt
apps/installer/launcher/src/: launcher.cpp  launcher.h  main.cpp
apps/installer/launcher/tests/: launcher_target_fixture.cpp  launcher_test.cpp
apps/installer/src/: file_permissions.cpp  file_permissions.h  installer.cpp  installer.h  json_codec.cpp  json_codec.h  main.cpp  manifest.cpp  manifest.h
apps/installer/tests/: installer_test.cpp
apps/launcher/: CMakeLists.txt
apps/launcher/src/: launcher.cpp  launcher.h  main.cpp
apps/launcher/tests/: launcher_test.cpp
apps/packager/: CMakeLists.txt
apps/packager/src/: main.cpp  packager.cpp  packager.h
apps/packager/tests/: packager_test.cpp
apps/server/: CMakeLists.txt
apps/server/src/: admin_http_server.cpp  admin_http_server.h  admin_json_codec.cpp  admin_json_codec.h  config.cpp  config.h  control_connection_registry.cpp  control_connection_registry.h  control_dispatcher.cpp  control_dispatcher.h  control_server.cpp  control_server.h  control_service.cpp  control_service.h  database.cpp  database.h  grpc_control_server.cpp  grpc_control_server.h  grpc_control_service.cpp  grpc_control_service.h  http2_connection_registry.cpp  http2_connection_registry.h  http2_control_dispatcher.cpp  http2_control_dispatcher.h  http2_control_server.cpp  http2_control_server.h  http2_control_service.cpp  http2_control_service.h  http_handler.cpp  http_handler.h  http_server.cpp  http_server.h  install_platform_registry.cpp  install_platform_registry.h  install_platform_resolver.cpp  install_script_renderer.cpp  install_script_renderer.h  installer_package_resolver.cpp  installer_package_resolver.h  installer_policy_registry.cpp  (+14 more)
apps/server/tests/: server_admin_http_test.cpp  server_config_test.cpp  server_control_service_test.cpp  server_control_unit_test.cpp  server_database_async_test.cpp  server_database_queue_test.cpp  server_database_test.cpp  server_failure_matrix_test.cpp  server_test.cpp  server_upgrade_lifecycle_test.cpp  server_worker_pool_test.cpp
apps/server/web/: agents.html  index.html  install.html
apps/server/web/admin/: packages.html
apps/server/web/assets/: admin.js  management.css  management.js
apps/server/web/scripts/install/: linux.sh  windows.ps1
ci/images/: version.txt
cmake/: check_file_size.cmake
docs/: README.md  architecture.md  contracts.md  operations.md  roadmap.md  security.md  testing.md
docs/adr/: 0001-use-cpp.md  0002-agent-outbound-connection.md  0003-default-read-only-tasks.md  0004-third-party-dependency-baseline.md  0005-log-abstraction-boundary.md  0006-manifest-driven-installer.md  0007-agent-control-channel-grpc-http2.md  0007-agent-control-channel-http2-protobuf-lite.md  0008-server-persistence-and-connection-concurrency.md  0009-server-async-io-and-store.md  0010-web-management-entry.md  0011-agent-package-install-upgrade.md  0012-cross-platform-script-boundary.md  0013-web-ui-information-architecture-and-interaction-guidelines.md  0014-component-versioning-and-tag-driven-release.md  0015-installer-owned-launcher-stub.md  0016-container-build-and-preflight-gate.md  (+3 more)
libs/core/: CMakeLists.txt
libs/core/include/zfleet/core/: component.h  log.h  path.h  time.h  uuid.h  version.h  version_compare.h
libs/core/src/: component.cpp  log.cpp  path.cpp  time.cpp  uuid.cpp  version.cpp  version_compare.cpp
libs/core/tests/: component_test.cpp  log_test.cpp  path_test.cpp  time_test.cpp  version_compare_test.cpp  version_test.cpp
libs/crypto/: CMakeLists.txt
libs/crypto/include/zfleet/crypto/: sha256.h
libs/crypto/src/: sha256.cpp
libs/crypto/tests/: sha256_test.cpp
libs/package/: CMakeLists.txt
libs/package/include/zfleet/package/: archive.h  manifest.h  temp_dir.h
libs/package/src/: archive.cpp  manifest.cpp  temp_dir.cpp
libs/package/tests/: archive_test.cpp  manifest_test.cpp
libs/platform/: CMakeLists.txt
libs/platform/include/zfleet/platform/: file_permissions.h  process.h  system.h
libs/platform/src/: file_permissions.cpp  process.cpp  system.cpp
libs/platform/tests/: file_permissions_test.cpp  process_fixture.cpp  process_test.cpp  system_test.cpp
libs/protocol/: CMakeLists.txt
libs/protocol/include/zfleet/protocol/: control_codec.h  json_codec.h  message.h
libs/protocol/proto/zfleet/protocol/v1/: agent_control.proto
libs/protocol/src/: control_codec.cpp  json_codec.cpp  message.cpp
libs/protocol/tests/: grpc_protocol_test.cpp  message_test.cpp  protobuf_protocol_test.cpp
libs/transport/: CMakeLists.txt
libs/transport/include/zfleet/transport/: frame_codec.h  http2_session.h  http_download.h  nghttp2_compat.h
libs/transport/src/: frame_codec.cpp  http2_session.cpp  http_download.cpp
libs/transport/tests/: frame_codec_test.cpp  http_download_test.cpp
scripts/: bootstrap-vcpkg.sh  build.sh  builder.sh  check.sh  deploy-local.sh  generate-release-notes.sh  inspect-release-binaries.sh  inspect-release-packages.sh  install-local.sh  linux-package-smoke.sh  make-package.sh  package.sh  test.sh  vcpkg.sh
tests/integration/: CMakeLists.txt  agent_runtime_test.cpp  control_command_stream_test.cpp  control_flow_test.cpp  install_flow_test.cpp  installer_stub_flow_test.cpp  smoke_test.cpp
tests/support/: CMakeLists.txt  http2_test_util.cpp  http2_test_util.h  server_event_test_util.cpp  server_event_test_util.h  sqlite_test_util.cpp  sqlite_test_util.h  test_util.cpp  test_util.h
(+5 files in other folders)
